[package]
name = "rust-bdd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.11"
# futures = "0.3"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.5"
chrono = "0.4"

[[test]]
name = "public-rest-bdd" 
harness = false  # allows Cucumber to print output instead of libtest
